	  being printed (2015-03-15).
	* arch/arm/src/sama5/sam_hsmci.c:  Fix a bug in SAMA5 HSMCI.  The
	  bitfield mask and shift values were reversed resulting in a trashed
	  value for the number of blocks in the BLOCKR register.  This was
	  sufficient to prevent DMA writes from working (2015-03-15).
	* drivers/mtd/at24xx.c, Kconfig, and include/nuttx/fs/ioctl.h:  Add
	  support for (1) the byte-oriented read() method, (2) devices that
	  have extended memory regions, and (3) devices that use 8-bit
	  addressing (2015-03-17).
	* arch/mips/src/mips32/Kconfig, Toolchain.defs, and
	  configs/pic32mz-starterkit/nsh/Make.defs:  Changes that will permit
	  building of the PIC32MZ Start Kit configuration using MPLAB and the
	  XC32 toolchain.  From David Sidrane (2015-03-17).
	* arch/arm/src/stm32/stm32_rtc_lowerhalf.c:  Fix some errors in the
	  STM32 RTC lower-half driver that cause compilation failures.  From
	  shilo.xyz (2015-03-19).
	* arch/arm/src/sama5/chip/sam_tc.h: Fix typos in timer/counter header
	  file.  From Bob Doiron (2015-03-20).
	* configs/olimexino-stm32: Board support for the Olimexino STM32 board
	  from David Sidrane (2015-03-20).
	* PIC32MZ:  Incorporated a set of patches that makes the basic NSH
	  configuration on the PIC32MZ Starter Kit.  From Kristopher Tate
	  (2015-03-22).
	* arch/arm/src/tiva: (1) ADC driver has been re-organized; configuration
	  is now handled in code instead of Kconfig to help reduce bloat and
	  confusion. (2) Timer changed to remove ADC coupling in Kconfig to code
	  and moved configuration up from arch/arm/src/tiva to
	  configs/tm4c123g-launchpad/src. (3) GPIO driver needed small fixes in
	  the configuration routines and discovered false-positive bugs in
	  interrupt testing: interrupts are now verified to actually be working
	  reliably. (4) Attempt to apply some consistency in the tiva arch/
	  level's interface to the config/board/ level driver configuration.
	  From Calvin Maguranis (2015-03-23).